// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KModal matches snapshot 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="modal-backdrop">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">Modal Title</div>
        <div class="modal-body">Modal Body</div>
        <div class="modal-footer">
          <button class="button rounded primary" handle-click="function () { [native code] }">Proceed</button>
          <button class="button rounded secondary" handle-click="function () { [native code] }">Cancel</button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders header slot when passed 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="modal-backdrop">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">
          <div>This is some header text</div>
        </div>
        <div class="modal-body">Modal Body</div>
        <div class="modal-footer">
          <button class="button rounded primary" handle-click="function () { [native code] }">Proceed</button>
          <button class="button rounded secondary" handle-click="function () { [native code] }">Cancel</button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
